syntax = "proto3";

service DictionaryService {
  rpc UpdateWord (WordRequest) returns (WordResponse);
  rpc GetDictionary (Empty) returns (DictionaryResponse);
}

message WordRequest {
  string word = 1;
}

message WordResponse {
  string message = 1;
}

message Empty {}

message DictionaryResponse {
  repeated WordCount words = 1;
}

message WordCount {
  string word = 1;
  int32 count = 2;
}
